# maracuja-abacaxi

./: .gitignore  .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  svelte.config.js  tauri.conf.json
examples/: a.rs
src-svelte/routes/: +layout.svelte  +page.svelte  SavePathDisplay.svelte
src-tauri/: lib.rs  main.rs  tauri.conf.json  tool.rs
src-tauri/cipher/: cipher_decrypt.rs  cipher_encrypt.rs
